--- a/electron/index.html
+++ b/electron/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -49,15 +49,32 @@
         align-items: flex-end;
       }
       .control {
-        display: flex;\n        flex-direction: column;\n        gap: 6px;\n        font-size: 12px;\n        color: #dbe7ff;
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        font-size: 12px;
+        color: #dbe7ff;
       }
       .control select,
       .control input {
-        background: #f1f5ff;\n        border: 1px solid rgba(59, 130, 246, 0.35);\n        border-radius: 7px;\n        padding: 8px 12px;\n        color: #0f172a;
+        background: #f1f5ff;
+        border: 1px solid rgba(59, 130, 246, 0.35);
+        border-radius: 7px;
+        padding: 8px 12px;
+        color: #0f172a;
         font-size: 13px;
         min-width: 170px;
+        color-scheme: light;
       }
-      .control select:focus,\n      .control input:focus {\n        outline: 2px solid rgba(59, 130, 246, 0.7);\n        outline-offset: 1px;\n      }
+      .control select option {
+        color: #0f172a;
+        background: #f8fbff;
+      }
+      .control select:focus,
+      .control input:focus {
+        outline: 2px solid rgba(59, 130, 246, 0.7);
+        outline-offset: 1px;
+      }
       .range-row {
         display: flex;
         gap: 12px;
@@ -172,10 +189,9 @@
         <label class="control">
           Scan Mode
           <select id="scan-mode">
-            <option value="incremental">Continuous (since last scan)</option>
             <option value="calendar-day">Specific Day (00:00-23:59 ET)</option>
             <option value="custom-range">Custom UTC Range</option>
-            <option value="recent">Recent Activity</option>
+            <option value="recent" selected>Recent Activity</option>
           </select>
         </label>
         <label class="control hidden" id="calendar-day-group">
@@ -229,13 +245,9 @@
       </div>
     </header>
     <main>
-      <div id="status">Choose a scan mode and hit “Run Scan” to fetch the latest bets.</div>
+      <div id="status">Choose a scan mode and hit "Run Scan" to fetch the latest bets.</div>
       <div id="results"></div>
     </main>
     <script src="renderer.js"></script>
   </body>
 </html>
-
-
-
-
